codemp/generated/game/g_bot.h

float trap_Cvar_VariableValue( const char *var_name );
int G_ParseInfos( char *buf, int max, char *infos[] );
void G_LoadArenasFromFile( char *filename );
int G_GetMapTypeBits( char *type );
qboolean G_DoesMapSupportGametype( const char *mapname, int gametype );
const char *G_RefreshNextMap( int gametype, qboolean forced );
void G_LoadArenas();
const char *G_GetArenaInfoByMap( const char *map );
static void PlayerIntroSound( const char *modelAndSkin );
void G_AddRandomBot( int team );
int G_RemoveRandomBot( int team );
int G_CountHumanPlayers( int team );
int G_CountBotPlayers( int team );
void G_CheckMinimumPlayers();
void G_CheckBotSpawn();
static void AddBotToSpawnQueue( int clientNum, int delay );
void G_RemoveQueuedBotBegin( int clientNum );
qboolean G_BotConnect( int clientNum, qboolean restart );
static void G_AddBot( const char *name, float skill, const char *team, int delay, char *altname );
void Svcmd_AddBot_f();
void Svcmd_BotList_f();
static void G_SpawnBots( char *botList, int baseDelay );
static void G_LoadBotsFromFile( char *filename );
static void G_LoadBots();
char *G_GetBotInfoByNumber( int num );
char *G_GetBotInfoByName( const char *name );
void G_InitBots();