codemp/julia/generated/game/g_bot.jl

trap_Cvar_VariableValue( var_name_ ) = ccall((:trap_Cvar_VariableValue, lib), Float32, ( Ptr{Char},  ), var_name_ );
G_ParseInfos( buf_, max_, infos_ ) = ccall((:G_ParseInfos, lib), Int32, ( Ptr{Char}, Int32, Ptr{Char},  ), buf_, max_, infos_ );
G_LoadArenasFromFile( filename_ ) = ccall((:G_LoadArenasFromFile, lib), Void, ( Ptr{Char},  ), filename_ );
G_GetMapTypeBits( type_ ) = ccall((:G_GetMapTypeBits, lib), Int32, ( Ptr{Char},  ), type_ );
G_DoesMapSupportGametype( mapname_, gametype_ ) = ccall((:G_DoesMapSupportGametype, lib), qboolean, ( Ptr{Char}, Int32,  ), mapname_, gametype_ );
G_RefreshNextMap( gametype_, forced_ ) = ccall((:G_RefreshNextMap, lib), Char, ( Int32, qboolean,  ), gametype_, forced_ );
G_LoadArenas() = ccall((:G_LoadArenas, lib), Void, (),  );
G_GetArenaInfoByMap( map_ ) = ccall((:G_GetArenaInfoByMap, lib), Char, ( Ptr{Char},  ), map_ );
PlayerIntroSound( modelAndSkin_ ) = ccall((:PlayerIntroSound, lib), Void, ( Ptr{Char},  ), modelAndSkin_ );
G_AddRandomBot( team_ ) = ccall((:G_AddRandomBot, lib), Void, ( Int32,  ), team_ );
G_RemoveRandomBot( team_ ) = ccall((:G_RemoveRandomBot, lib), Int32, ( Int32,  ), team_ );
G_CountHumanPlayers( team_ ) = ccall((:G_CountHumanPlayers, lib), Int32, ( Int32,  ), team_ );
G_CountBotPlayers( team_ ) = ccall((:G_CountBotPlayers, lib), Int32, ( Int32,  ), team_ );
G_CheckMinimumPlayers() = ccall((:G_CheckMinimumPlayers, lib), Void, (),  );
G_CheckBotSpawn() = ccall((:G_CheckBotSpawn, lib), Void, (),  );
AddBotToSpawnQueue( clientNum_, delay_ ) = ccall((:AddBotToSpawnQueue, lib), Void, ( Int32, Int32,  ), clientNum_, delay_ );
G_RemoveQueuedBotBegin( clientNum_ ) = ccall((:G_RemoveQueuedBotBegin, lib), Void, ( Int32,  ), clientNum_ );
G_BotConnect( clientNum_, restart_ ) = ccall((:G_BotConnect, lib), qboolean, ( Int32, qboolean,  ), clientNum_, restart_ );
G_AddBot( name_, skill_, team_, delay_, altname_ ) = ccall((:G_AddBot, lib), Void, ( Ptr{Char}, Float32, Ptr{Char}, Int32, Ptr{Char},  ), name_, skill_, team_, delay_, altname_ );
Svcmd_AddBot_f() = ccall((:Svcmd_AddBot_f, lib), Void, (),  );
Svcmd_BotList_f() = ccall((:Svcmd_BotList_f, lib), Void, (),  );
G_SpawnBots( botList_, baseDelay_ ) = ccall((:G_SpawnBots, lib), Void, ( Ptr{Char}, Int32,  ), botList_, baseDelay_ );
G_LoadBotsFromFile( filename_ ) = ccall((:G_LoadBotsFromFile, lib), Void, ( Ptr{Char},  ), filename_ );
G_LoadBots() = ccall((:G_LoadBots, lib), Void, (),  );
G_GetBotInfoByNumber( num_ ) = ccall((:G_GetBotInfoByNumber, lib), Char, ( Int32,  ), num_ );
G_GetBotInfoByName( name_ ) = ccall((:G_GetBotInfoByName, lib), Char, ( Ptr{Char},  ), name_ );
G_InitBots() = ccall((:G_InitBots, lib), Void, (),  );
